--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     </title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>   
-    <a href="recipes/biryani.html" target="_blank">Chicken Biryani</a>  
+    <h1>Om's Recipes</h1>   
+    <ul>
+        <li><a href="recipes/biryani.html" target="_blank">Chicken Biryani</a> </li>
+        <li><a href="recipes/vadapav.html" target="_blank">Vada Pav</a></li>
+
+
+    </ul>
+     
 </body>
 </html>
 
