--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -70,7 +70,11 @@
         <h3><li>Garnish and Serve:</li></h3>
         Garnish with chopped coriander leaves, mint leaves, and fried onions. Serve hot with raita or a side salad.
 
+
     </ol>
+    <h3>
+        Enjoy your delicious homemade Chicken Biryani!
+    </h3>
 
     
 </body>
