--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <title>
         recipes
     </title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
     <h1>Om's Recipes</h1>   
+    <div>
     <ul>
         <li><a href="recipes/biryani.html" target="_blank">Chicken Biryani</a> </li>
         <li><a href="recipes/vadapav.html" target="_blank">Vada Pav</a></li>
-
-
+        <li><a href="recipes/scrambled-eggs.html" target="_blank">Screambled Eggs</a></li>
     </ul>
+</div>
+
      
 </body>
 </html>
