removed the list for style

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <h1>Om's Recipes</h1>   
+    <div class="title">Om's Recipes<div>   
     <div>
-    <ul>
-        <li><a href="recipes/biryani.html" target="_blank">Chicken Biryani</a> </li>
-        <li><a href="recipes/vadapav.html" target="_blank">Vada Pav</a></li>
-        <li><a href="recipes/scrambled-eggs.html" target="_blank">Screambled Eggs</a></li>
-    </ul>
+        <button class="button"><a href="recipes/biryani.html" target="_blank">Chicken Biryani</a></button>
+        <button class="button"><a href="recipes/vadapav.html" target="_blank">Vada Pav</a></button>
+        <button class="button"><a href="recipes/scrambled-eggs.html" target="_blank">Screambled Eggs</a></button>  
 </div>
 
      
