--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -5,18 +5,19 @@
     <title>
         recipes
     </title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-    <h1>Chicken Biryani </h1>
-    <img src="../images/biryani.jpg" alt="image of an chicken biryani" height="408" width="612">
-    <h3>
+    <h1 class="title">Chicken Biryani </h1>
+    <img class="images" src="../images/biryani.jpg" alt="image of an chicken biryani" height="408" width="612">
+    <h3 class="description">
         Chicken Biryani is a flavorful and aromatic South Asian dish that marries succulent pieces of chicken with fragrant basmati rice and a blend of aromatic spices. 
         This one-pot wonder is known for its rich taste, tender meat, and the harmonious fusion of spices that create a symphony of flavors in every bite. 
         Whether enjoyed during festive occasions or casual dinners, Chicken Biryani is a classic dish that never fails to delight the senses.
     </h3>
-    <h1> Ingrediants </h1>
-    <strong><em>For the marinade:</em></strong>
-    <ul>
+    <h1 class="subtitle"> Ingrediants </h1>
+    <strong class="subsub"><em>For the marinade:</em></strong>
+    <ul class="text">
         <li>1 kg chicken, cut into pieces</li>
         <li>1 cup yogurt</li>
         <li> tablespoon ginger-garlic paste</li>
@@ -24,8 +25,8 @@
         <li>1 teaspoon turmeric powder</li>
         <li>Salt to taste</li>
     </ul>
-    <strong><em>For the Rice:</em></strong>
-    <ul>
+    <strong class="subsub"><em>For the Rice:</em></strong>
+    <ul class="text">
         <li>2 cups basmati rice, soaked for 30 minutes</li>
         <li>4-5 cups water</li>    
         <li>1-2 bay leaves</li>    
@@ -34,8 +35,8 @@
         <li>2-inch cinnamon stick</li>    
         <li>Salt to taste</li>       
     </ul>
-    <strong><em>For the Biryani:</em></strong> 
-    <ul>
+    <strong class="subsub"><em>For the Biryani:</em></strong> 
+    <ul class="text">
         <li>3 tablespoons ghee or oil</li>
         <li>2 large onions, thinly sliced</li>    
         <li>2 tomatoes, chopped</li>   
@@ -44,35 +45,35 @@
         <li>Fresh mint leaves, chopped (for garnish)</li>
         <li>Saffron strands soaked in warm milk (optional)</li>
     </ul>
-    <strong><em>For the Spices:</em></strong> 
-    <ul>
+    <strong class="subsub"><em>For the Spices:</em></strong> 
+    <ul class="text">
         <li>1 teaspoon cumin seeds</li>
         <li>1 teaspoon coriander powder</li>
         <li>1 teaspoon garam masala</li>
         <li>1/2 teaspoon red chili powder</li>
         <li>Salt to taste</li>
     </ul>
-    <h1>Steps:</h1>
-    <ol>
-        <h3><li>Marinate the Chicken:</li></h3>
+    <h1 class="subtitle">Steps:</h1>
+    <ol class="text">
+        <h3 class="subsub"><li>Marinate the Chicken:</li></h3>
             In a bowl, mix chicken pieces with yogurt, ginger-garlic paste, red chili powder, turmeric powder, and salt. Allow it to marinate for at least 1-2 hours.
-        <h3><li>Cook the Rice:</li></h3>
+        <h3 class="subsub"><li>Cook the Rice:</li></h3>
         Boil soaked basmati rice in a pot with water, bay leaves, cardamom, cloves, cinnamon, and salt until it's 70-80% cooked. Drain the water.
-        <h3><li>Prepare Fried Onions:</li></h3>
+        <h3 class="subsub"><li>Prepare Fried Onions:</li></h3>
         In a separate pan, fry thinly sliced onions until golden brown. Set aside for later use.
-        <h3><li>Cook the Chicken:</li></h3>
+        <h3 class="subsub"><li>Cook the Chicken:</li></h3>
         In a large pan, heat ghee or oil. Add cumin seeds, then add marinated chicken. Cook until the chicken is browned and cooked through. Add tomatoes and cook until they soften.
-        <h3><li>Layering:</li></h3>
+        <h3 class="subsub"><li>Layering:</li></h3>
         In a heavy-bottomed pot, layer half of the partially cooked rice, followed by the cooked chicken mixture. Sprinkle half of the garam masala, coriander powder, red chili powder, and fried onions. Repeat the layers.
 
-        <h3><li>Final Cooking:</li></h3>
+        <h3 class="subsub"><li>Final Cooking:</li></h3>
         Drizzle saffron-soaked milk over the top layer. Cover the pot with a tight-fitting lid and cook on low heat for 20-25 minutes or until the rice is fully cooked and aromatic.
-        <h3><li>Garnish and Serve:</li></h3>
+        <h3 class="subsub"><li>Garnish and Serve:</li></h3>
         Garnish with chopped coriander leaves, mint leaves, and fried onions. Serve hot with raita or a side salad.
 
 
     </ol>
-    <h3>
+    <h3 class="thanks">
         Enjoy your delicious homemade Chicken Biryani!
     </h3>
 
