--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-    <h1>Scrambled Eggs </h1>
-    <img src="../images/scrambled-eggs.jpg" alt="image of scrambled eggs" height="726" width="1160">
-    <h3>
+    <h1 class="title">Scrambled Eggs </h1>
+    <img class="images" src="../images/scrambled-eggs.jpg" alt="image of scrambled eggs" height="726" width="1160">
+    <h3 class="description">
 
         Delight in the simplicity of classic scrambled eggs, a timeless breakfast staple. Freshly cracked eggs are gently whisked and cooked to perfection in a non-stick pan, 
         creating soft, velvety curds. Seasoned with a pinch of salt and pepper, the eggs offer a comforting and satisfying flavor. Served hot and ready in minutes, 
         this straightforward dish is a morning ritual that embraces both simplicity and indulgence, making it an enduring favorite for breakfast enthusiasts.
     </h3>
-    <h1> Ingrediants:</h1>
-    <ul>
+    <h1 class="subtitle"> Ingrediants:</h1>
+    <ul class="text">
         <li>2 eggs</li>
         <li>Salt and pepper to taste</li>
         <li>1 tablespoon butter or cooking oil (optional)</li>
     </ul>
-    <h1>Steps:</h1>
-    <ol>
+    <h1 class="subtitle">Steps:</h1>
+    <ol class="text">
         <li>Crack the eggs into a bowl and beat them with a fork or whisk until well combined.</li>
         <li>Heat a non-stick pan over medium-low heat. Add butter or oil if desired.</li>
         <li>Pour the beaten eggs into the pan.</li>
@@ -30,7 +31,7 @@
         <li>Continue stirring until the eggs are just set but still moist.</li>
         <li>Remove from heat and serve immediately.</li>
     </ol>
-    <h3>
+    <h3 class="thanks">
         Enjoy your quick and delicious scrambled eggs!
     </h3>
 
