--- a/recipes/vadapav.html
+++ b/recipes/vadapav.html
@@ -5,11 +5,12 @@
     <title>
         recipes
     </title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-    <h1>Vada Pav </h1>
-    <img src="../images/vadapav.jpg" alt="image of an vada pav" height="360" width="478">
-    <h3>
+    <h1 class="title">Vada Pav </h1>
+    <img class="images" src="../images/vadapav.jpg" alt="image of an vada pav" height="360" width="478">
+    <h3 class="description">
 
         Vada Pav, Mumbai's street food gem, features a spiced potato patty fried to perfection, nestled inside a soft pav. The potato filling, 
         seasoned with mustard seeds and aromatic spices, offers a flavorful kick. Encased in a crispy gram flour batter, it's often served with a trio of chutneys—garlic,
@@ -17,9 +18,9 @@
         This iconic Indian snack is a beloved on-the-go delight, celebrated for its affordability and delicious street-side charm.
         
     </h3>
-    <h1> Ingrediants </h1>
-    <strong><em>For the Potato Filling:</em></strong>
-    <ul>
+    <h1 class="subtitle"> Ingrediants </h1>
+    <strong class="subsub"><em>For the Potato Filling:</em></strong>
+    <ul class="text">
         <li>4 large potatoes, boiled and mashed</li>
         <li>1 tablespoon oil</li>
         <li> 1 teaspoon mustard seeds</li>
@@ -30,12 +31,12 @@
         <li>Salt to taste</li>
         <li>Fresh coriander leaves, chopped</li>
     </ul>
-    <strong><em>For frying:</em></strong>
-    <ul>
+    <strong class="subsub"><em>For frying:</em></strong>
+    <ul class="text">
         <li>Vegetable oil</li>     
     </ul>
-    <strong><em>Other Ingrediants:</em></strong> 
-    <ul>
+    <strong class="subsub"><em>Other Ingrediants:</em></strong> 
+    <ul class="text">
         <li>Pav (soft bread rolls)</li>
         <li>Green chutney</li>    
         <li>Tamarind chutney</li>   
@@ -45,28 +46,28 @@
     </ul>
 
     </ul>
-    <h1>Steps:</h1>
-    <ol>
-        <h3><li>Prepare the Potato Filling:</li></h3>
+    <h1 class="subtitle">Steps:</h1>
+    <ol class="text">
+        <h3 class="subsub" ><li>Prepare the Potato Filling:</li></h3>
             <ul>
                 <li>Heat oil in a pan, add mustard seeds, cumin seeds, and let them splutter.</li>
                 <li>Add ginger-garlic paste and sauté until fragrant.</li>
                 <li>Add turmeric powder, red chili powder, mashed potatoes, salt, and chopped coriander. Mix well and cook for 2-3 minutes. Allow the filling to cool.</li>
             </ul>
-        <h3><li>Make the Gram Flour Batter:</li></h3>
+        <h3 class="subsub"><li>Make the Gram Flour Batter:</li></h3>
         <ul>
             <li>In a bowl, mix gram flour, rice flour, turmeric powder, red chili powder, and salt.</li>
             <li>Gradually add water to make a smooth batter. Add baking soda if using</li>
         </ul>
         
-        <h3><li>Shape and Dip the Potato Filling:</li></h3>
+        <h3 class="subsub"><li>Shape and Dip the Potato Filling:</li></h3>
         <ul>
             <li>Divide the potato mixture into small balls and flatten them to form patties.</li>
             <li>Heat oil in a pan for frying.</li>
             <li>Dip each potato patty in the gram flour batter, ensuring it's well-coated, and fry until golden brown and crispy. Drain excess oil on paper towels.</li>
         </ul>
 
-        <h3><li>Assemble the Vada Pav:</li></h3>
+        <h3 class="subsub"><li>Assemble the Vada Pav:</li></h3>
         <ul>
             <li>Slit the pav horizontally without cutting all the way through.</li>
             <li>Spread garlic chutney (if using), green chutney, and tamarind chutney on the inner sides of the pav.</li>
@@ -74,14 +75,14 @@
             <li>Optionally, add thin slices of onion and tomato.</li>
             <li>Garnish with fresh coriander leaves.</li>
         </ul>
-        <h3><li>Serve:</li></h3>
+        <h3 class="subsub"><li>Serve:</li></h3>
         <ul>
             <li>Serve the vada pav hot with extra chutneys on the side.</li>
         </ul>
 
 
     </ol>
-    <h3>
+    <h3 class="thanks">
         Enjoy your homemade Vada Pav, a popular and flavorful street food snack!
     </h3>
 
